# tennis_refactoring_kata

./: .gitignore  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: test.yml
src/tennis_scoreboard/: tennis.py  tennis_game.py
src/tennis_scoreboard/domain/: game_state_factory.py  i_game_state_factory.py  player.py  score.py
src/tennis_scoreboard/domain/game_states/: advantage.py  deuce.py  early_game_lead.py  game_state.py  game_state_factory.py  i_game_state.py  tie.py  win.py
src/tennis_scoreboard/domain/players/: i_player.py  player.py
src/tennis_scoreboard/presentation/: scoreboard.py
tests/: tennis_test.py  tennis_unittest.py
